<resources>
    <string name="app_name">ScoreKeeper</string>
    <string name="team_a">Team A</string>
    <string name="team_b">Team B</string>
    <string name="six_points">Touch Down - 6</string>
    <string name="field_points">Field goal - 3</string>
    <string name="extra_points">extra point - 1</string>
    <string name="reset">reset</string>
    <string name="penalty_points">-1 penalty</string>


</resources>
