<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:scaleType="center"
            android:src="@drawable/football" />


        <LinearLayout
            android:id="@+id/main_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/teams"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/team_a" />

                <TextView
                    android:id="@+id/score_a"
                    style="@style/scores"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="0" />

                <Button
                    style="@style/button_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="addSixPointsForA"
                    android:text="@string/six_points"

                    />

                <Button
                    style="@style/button_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="addThreePointsForA"
                    android:text="@string/field_points"

                    />

                <Button
                    style="@style/button_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="addOnePointsForA"
                    android:text="@string/extra_points" />

                <Button
                    style="@style/button_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="penaltyPointsForA"
                    android:text="@string/penalty_points" />

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#FF5722" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/teams"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/team_b" />

                <TextView
                    android:id="@+id/score_b"
                    style="@style/scores"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="0"


                    />

                <Button
                    style="@style/button_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="addSixPointsForB"
                    android:text="@string/six_points"

                    />

                <Button
                    style="@style/button_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="addThreePointsForB"
                    android:text="@string/field_points" />

                <Button
                    style="@style/button_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="addOnePointsForB"
                    android:text="@string/extra_points" />

                <Button
                    style="@style/button_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="penaltyPointsForB"
                    android:text="@string/penalty_points" />

            </LinearLayout>

        </LinearLayout>

        <Button
            style="@style/button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/main_layout"
            android:layout_centerHorizontal="true"
            android:onClick="resetScores"
            android:text="@string/reset" />

    </RelativeLayout>


</ScrollView>